@@ -17,7 +17,8 @@
 	- MiNT port (Guido Flohr <gufl0000@stud.uni-sb.de>).
 	- fix: --rebuilddb with --root dinna remove directory (Michael Andres).
 	- fix: false fingerprint stat cache hit -- "the tetex problem" (#2727).
-	- fix: bsearch needs macro table sorted after undefine.
+	- fix: bsearch needs macro table sorted after undefine. (#3713).
+	- fix: --checksig segfault with odd pgp output (e.g. w/o ~/.pgp) (#3720)
 
 3.0 -> 3.0.1
 	- fix: %verifyscript resurrected (Shing-Gene Yung).
